manifests/dev/slskd/Deployment-slskd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: slskd
    app.kubernetes.io/name: slskd
  name: slskd
  namespace: slskd
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: slskd
      app.kubernetes.io/name: slskd
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: slskd
        app.kubernetes.io/name: slskd
    spec:
      containers:
        - env:
            - name: TZ
              value: Etc/UTC
            - name: SLSKD_REMOTE_CONFIGURATION
              value: "true"
            - name: SLSKD_SHARED_DIR
              value: /shares
            - name: SLSKD_SLSK_USERNAME
              valueFrom:
                secretKeyRef:
                  key: username
                  name: slskd-web-credentials
            - name: SLSKD_SLSK_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: password
                  name: slskd-web-credentials
            - name: SLSKD_USERNAME
              valueFrom:
                secretKeyRef:
                  key: username
                  name: slskd-web-credentials
            - name: SLSKD_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: password
                  name: slskd-web-credentials
            - name: SLSKD_API_KEY
              valueFrom:
                secretKeyRef:
                  key: apiKey
                  name: slskd-web-credentials
            - name: HTTP_PROXY
              value: http://gluetun.gluetun:8888
            - name: HTTPS_PROXY
              value: http://gluetun.gluetun:8888
            - name: NO_PROXY
              value: localhost,127.0.0.1,.svc,.svc.cluster.local,soularr.soularr,lidarr.lidarr
          image: slskd/slskd:latest
          imagePullPolicy: IfNotPresent
          name: slskd
          ports:
            - containerPort: 5030
              name: http
              protocol: TCP
            - containerPort: 5031
              name: https
              protocol: TCP
            - containerPort: 50300
              name: p2p
              protocol: TCP
          volumeMounts:
            - mountPath: /app
              name: config
            - mountPath: /app/downloads
              name: downloads
            - mountPath: /shares
              name: shares
      securityContext:
        fsGroup: 1000
      serviceAccountName: default
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: slskd-slskd-config
        - name: downloads
          persistentVolumeClaim:
            claimName: slskd-slskd-downloads
        - name: shares
          persistentVolumeClaim:
            claimName: slskd-slskd-shares
