manifests/dev/slskd/Service-slskd.yaml
apiVersion: v1
kind: Service
metadata:
  name: slskd
  namespace: slskd
spec:
  ports:
    - name: http
      port: 5030
      protocol: TCP
      targetPort: http
    - name: https
      port: 5031
      protocol: TCP
      targetPort: https
    - name: p2p
      port: 50300
      protocol: TCP
      targetPort: p2p
  selector:
    app.kubernetes.io/instance: slskd
    app.kubernetes.io/name: slskd
  type: ClusterIP
