manifests/dev/slskd/Ingress-slskd.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: slskd
  namespace: slskd
spec:
  ingressClassName: traefik
  rules:
    - host: slskd.home.kronkltd.net
      http:
        paths:
          - backend:
              service:
                name: slskd
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - slskd.home.kronkltd.net
